# asteroid-competition

./: DATA_DICTIONARY.md  README.md  SUBMISSION_GUIDE.md  environment.yml  pyproject.toml  train_model.py
.ipynb_checkpoints/: jakes_strategy_notes-checkpoint.md
strategies/: model.joblib  strategy.py
