# Asteroid Competition - Player Kit
# IMPORTANT: These versions are pinned to match the competition sandbox exactly.
# Using different versions may cause model serialization/loading failures.

[project]
name = "pricing-sim-player"
version = "0.1.0"
description = "Asteroid Mining Bidding Simulation — Player Kit"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "joblib==1.3.2",
]

[project.optional-dependencies]
ml = [
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "catboost==1.2.2",
    "statsmodels==0.14.1",
]
torch = [
    "torch==2.2.0",
]
all = [
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "catboost==1.2.2",
    "statsmodels==0.14.1",
    "torch==2.2.0",
]
dev = [
    "jupyter",
    "matplotlib",
    "seaborn",
]
